--- a/DecodingGoldSequence.csproj
+++ b/DecodingGoldSequence.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="DevExpress.Data" Version="23.1.6" />
     <PackageReference Include="Extended.Wpf.Toolkit" Version="4.5.1" />
+    <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
     <PackageReference Include="ScottPlot.WPF" Version="4.1.68" />
   </ItemGroup>
 
